--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -89,6 +89,7 @@ footer a {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -97,7 +98,7 @@ footer a {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -187,7 +188,7 @@ trainers
 reorganize/consolidate styling with the below*/
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -375,7 +376,20 @@ reorganize/consolidate styling with the below*/
     color: #fce138;
 }
 
+  /*MEDIA QUERIES */
 
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width:980px) {
 
-  /* REACH OUT STYLES END */
+}
 
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width:768px) {
+    
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width:575px) {
+    
+    
+}
